<resources>
    <string name="app_name">Tip Timeeeeeeee</string>
    <string name="tip_amount">Tip amount :%s</string>
    <string name="calculate">Calculate</string>
    <string name="wanna_round_up">wanna round up</string>
    <string name="ok_10">OK (10%)</string>
    <string name="good_15">good (15%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="cost_of_service">Cost of Service</string>
</resources>